# AI_Powered_Customer_Support_ChatBot

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/api/: __init__.py  chat_routes.py  routes.py
backend/app/core/: __init__.py  database.py  embeddings.py  llm.py  vector_store.py
backend/app/models/: product.py
backend/app/services/: agent_router.py  data_loader.py  indexer.py  recommender.py  support_loader.py  support_rag.py
docs/faq/: return_policy.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  style.css
scripts/: __init__.py
tests/: conftest.py
tests/phase0/: test_structure.py
tests/phase1/: test_database.py  test_ingest.py
tests/phase2/: test_search_api.py  test_vector_store.py
tests/phase3/: test_agent_router.py  test_chat_api.py
tests/phase4/: test_cors.py  test_frontend_build.py
tests/phase5/: test_support_rag.py
