[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "app"                        # Exposes import name `app`
version = "0.1.0"
description = "Flask backend for AI Support Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "requests>=2.31,<3.0",
    "python-dotenv>=1.0,<2.0",
    "chromadb>=0.4,<0.5",
    "numpy>=1.26,<2.0",
    "openai>=1.25,<2.0",
]

[tool.setuptools]
# Map package `app` to source code living in backend/app
packages = ["app"]
package-dir = {"" = "backend"}
