[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "app"                        # Exposes import name `app`
version = "0.1.0"
description = "Flask backend for AI Support Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3",
    "sqlalchemy>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "chromadb>=0.5.23",
    "numpy>=1.26",
    "openai>=1.25",
    "langchain>=0.2.17",
    "langchain-community>=0.0.24",
    "langchain-openai>=0.1.7",
    "langgraph>=0.0.69",
]

[tool.setuptools]
# Map package `app` to source code living in backend/app
packages = ["app"]
package-dir = {"" = "backend"}
